--- a/README.org
+++ b/README.org
@@ -25,6 +25,8 @@
   This is specifically setup and trailed with my Lenovo ThinkPad X1 Carbon 4th Gen
   (Type 20FB) Laptop.
 
+  Mirrored on GitHub: https://github.com/logoraz/guix-craft.git
+
 ** System Configuration Outline (=system.scm=)
 
  Define system-level services & packages:
