--- a/README.org
+++ b/README.org
@@ -25,7 +25,10 @@
   This is specifically setup and trailed with my Lenovo ThinkPad X1 Carbon 4th Gen
   (Type 20FB) Laptop.
 
-  Mirrored on GitHub: https://github.com/logoraz/guix-craft.git
+  Git Repositories:
+
+  - GitLab: https://gitlab.com/logoraz/guix-craft.git
+  - GitHub (Mirror): https://github.com/logoraz/guix-craft.git
 
 ** System Configuration Outline (=system.scm=)
 
